FlexDeploy 8.0/fdtlt82/FLEXDEPLOY-12131/objects/agf__ADM_Team_Release__c.object
<CustomObject>
    <description>Keep track of which teams are part of a release.</description>
    <fields>
        <fullName>agf__Build__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Build</label>
        <referenceTo>agf__ADM_Build__c</referenceTo>
        <relationshipLabel>Team Builds</relationshipLabel>
        <relationshipName>Team_Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>agf__Release_Goals__c</fullName>
        <label>Release Goals</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Scrum_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scrum Team</label>
        <referenceTo>agf__ADM_Scrum_Team__c</referenceTo>
        <relationshipName>Release_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Team Release</label>
    <listViews>
        <fullName>agf__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>agf__All_160_Team_Releases</fullName>
        <columns>NAME</columns>
        <columns>agf__Scrum_Team__c</columns>
        <filterScope>Everything</filterScope>
        <label>All 160 Team Releases</label>
    </listViews>
    <listViews>
        <fullName>agf__All_Team_Releases</fullName>
        <columns>NAME</columns>
        <columns>agf__Scrum_Team__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Team Releases</label>
    </listViews>
    <nameField>
        <displayFormat>RT-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team Releases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>agf__Build_cannot_be_empty</fullName>
        <active>true</active>
        <errorConditionFormula>LEN(  agf__Build__c  ) = 0</errorConditionFormula>
        <errorDisplayField>agf__Build__c</errorDisplayField>
        <errorMessage>You must select a Build.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__Scrum_Team_Is_Active</fullName>
        <active>true</active>
        <errorConditionFormula>agf__Scrum_Team__r.agf__Active__c = false</errorConditionFormula>
        <errorMessage>The scrum team you selected is not active.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__Team_cannot_be_empty</fullName>
        <active>true</active>
        <errorConditionFormula>LEN( agf__Scrum_Team__c ) = 0</errorConditionFormula>
        <errorDisplayField>agf__Scrum_Team__c</errorDisplayField>
        <errorMessage>You must select a Scrum Team.</errorMessage>
    </validationRules>
</CustomObject>